--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -1,14 +1,32 @@
+<!--
+Copyright 2017 FileThis, Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
+
+
 <!-- ft-source-grid element demo -->
 
 <!-- Imports -->
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../paper-button/paper-button.html">
 
 <link rel="import" href="../ft-source-grid.html">
 
 
 <!--
 
-An element that renders a list of FileThis source items in a grid layout.
+An element that renders a grid of FileThis sources
 
 @demo demo/index.html
  -->
@@ -18,7 +36,11 @@ An element that renders a list of FileThis source items in a grid layout.
 
     <template>
 
-        <ft-source-grid></ft-source-grid>
+        <div class="layout vertical center">
+            <ft-source-grid id="grid"
+                              style="overflow:hidden; overflow-y:scroll; border:1px solid #DDD; width:563px;height:400px">
+            </ft-source-grid>
+        </div>
 
     </template>
 
@@ -30,6 +52,29 @@ An element that renders a list of FileThis source items in a grid layout.
 
             properties:
             {
+            },
+
+            ready: function()
+            {
+                this._loadFakeSources();
+            },
+
+            _loadFakeSources: function()
+            {
+                var path = "fake-sources.json";
+
+                var xmlHttpRequest = new XMLHttpRequest();
+                xmlHttpRequest.overrideMimeType("application/json");
+                xmlHttpRequest.open('GET', path, true);
+                xmlHttpRequest.onreadystatechange = function()
+                {
+                    if (xmlHttpRequest.readyState == 4 &&
+                        xmlHttpRequest.status == "200")
+                    {
+                        grid.sources = JSON.parse(xmlHttpRequest.responseText);
+                    }
+                };
+                xmlHttpRequest.send();
             }
 
         });
