--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -1,6 +1,26 @@
+<!--
+Copyright 2017 FileThis, Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
+
+
 <link rel="import" href="../polymer/polymer.html">
 
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../iron-list/iron-list.html">
+
+<link rel="import" href="../ft-source-grid-item/ft-source-grid-item.html">
 
 <!--
 `ft-source-grid`
@@ -15,9 +35,21 @@ An element that renders a list of FileThis source items in a grid layout.
 
     <template>
 
-        <div>
-            ft-source-grid
-        </div>
+        <iron-list selection-enabled
+                   grid
+                   id="sourceGrid"
+                   items="[[sources]]"
+                   selected-item="{{selectedSource}}"
+                   as="source">
+
+            <!-- Source item template -->
+            <template>
+                <ft-source-grid-item
+                        source="[[source]]"
+                        selected$="[[selected]]">
+                </ft-source-grid-item>
+            </template>
+        </iron-list>
 
     </template>
 
@@ -27,6 +59,29 @@ An element that renders a list of FileThis source items in a grid layout.
             is: 'ft-source-grid',
 
             properties: {
+
+                /** The list of source resources to be be displayed. */
+                sources:
+                {
+                    type: Array,
+                    notify: true,
+                    value: [],
+                    observer: "_onSourcesChanged"
+                },
+
+                /** The currently-selected source, if any. */
+                selectedSource:
+                {
+                    type: Object,
+                    notify: true,
+                    value: null
+                }
+            },
+
+            _onSourcesChanged: function()
+            {
+                // Hack for some kind of bug in iron-list
+                this.async(function() { this.$.sourceGrid.fire('iron-resize'); }, 1);
             }
 
         });
