--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -68,8 +68,8 @@ An element that renders a grid of FileThis sources
                 xmlHttpRequest.open('GET', path, true);
                 xmlHttpRequest.onreadystatechange = function()
                 {
-                    if (xmlHttpRequest.readyState == 4 &&
-                        xmlHttpRequest.status == "200")
+                    if (xmlHttpRequest.readyState === 4 &&
+                        xmlHttpRequest.status === 200)
                     {
                         grid.sources = JSON.parse(xmlHttpRequest.responseText);
                     }
