--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -35,8 +35,8 @@ An element that renders a list of FileThis source items in a grid layout.
 
     <template>
 
-        <iron-list selection-enabled
-                   grid
+        <iron-list grid
+                   selection-enabled
                    id="sourceGrid"
                    items="[[sources]]"
                    selected-item="{{selectedSource}}"
