--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -78,7 +78,7 @@ An element that renders a list of FileThis source items in a grid layout.
                 }
             },
 
-            _onSourcesChanged: function()
+            _onSourcesChanged: function(to, from)
             {
                 // Hack for some kind of bug in iron-list
                 this.async(function() { this.$.sourceGrid.fire('iron-resize'); }, 1);
