--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -39,6 +39,7 @@ An element that renders a list of FileThis source items in a grid layout.
                    selection-enabled
                    id="sourceGrid"
                    items="[[sources]]"
+                   style="background-color:white"
                    selected-item="{{selectedSource}}"
                    as="source">
 
