--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -38,6 +38,12 @@ An element that renders a grid of FileThis sources
 
     <template>
 
+        <style>
+            :host {
+                display:block;
+            }
+        </style>
+
         <div class="layout vertical center">
             <ft-source-grid
                     id="grid"
