--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -30,7 +30,7 @@ limitations under the License.
 
 An element that renders a grid of FileThis sources
 
-@demo demo/index.html
+@demo
  -->
 <dom-module id="demo-fixture">
 
