--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -21,12 +21,12 @@ limitations under the License.
 <link rel="import" href="../polymer/polymer.html">
 
 <!--
-`ft-source-grid`
-An element that renders a list of FileThis source items in a grid layout.
+`<ft-source-grid>`
 
-@demo demo/index.html
+This element displays a grid layout of FileThis source resources.
+
+@demo
 -->
-
 <dom-module id="ft-source-grid">
 
     <template>
