--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -18,11 +18,10 @@ limitations under the License.
 <!-- ft-source-grid element demo -->
 
 <!-- Imports -->
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../ft-element-demo/ft-element-demo.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
-
 <link rel="import" href="../../paper-button/paper-button.html">
-
+<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../ft-source-grid.html">
 
 
@@ -44,12 +43,16 @@ An element that renders a grid of FileThis sources
             }
         </style>
 
-        <div class="layout vertical center">
+        <ft-element-demo
+                style="width:100%; height:100%; ">
+
             <ft-source-grid
+                    slot="element"
                     id="grid"
-                    style="overflow:auto; width:600px; height:370px; border:1px solid #DDD">
+                    style="width:100%; height:100%; ">
             </ft-source-grid>
-        </div>
+
+        </ft-element-demo>
 
     </template>
 
@@ -80,7 +83,8 @@ An element that renders a grid of FileThis sources
                     if (xmlHttpRequest.readyState === 4 &&
                         xmlHttpRequest.status === 200)
                     {
-                        this.$.grid.sources = JSON.parse(xmlHttpRequest.responseText);
+                        var sources = JSON.parse(xmlHttpRequest.responseText);
+                        this.$.grid.sources = sources;
                     }
                 }.bind(this);
                 xmlHttpRequest.send();
