--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -42,8 +42,8 @@ This element displays a grid layout of FileThis source resources.
         <iron-list grid
                    selection-enabled
                    id="sourceGrid"
+                   style="background-color:white; "
                    items="[[sources]]"
-                   style="background-color:white"
                    selected-item="{{selectedSource}}"
                    as="source">
 
@@ -56,12 +56,38 @@ This element displays a grid layout of FileThis source resources.
             </template>
         </iron-list>
 
+        <!--<div-->
+                <!--class="layout vertical center"-->
+                <!--style="width:100%; height:100%; ">-->
+            <!--<iron-list grid-->
+                       <!--selection-enabled-->
+                       <!--id="sourceGrid"-->
+                       <!--style="background-color:white; "-->
+                       <!--items="[[sources]]"-->
+                       <!--selected-item="{{selectedSource}}"-->
+                       <!--as="source">-->
+
+                <!--&lt;!&ndash; Source item template &ndash;&gt;-->
+                <!--<template>-->
+                    <!--<ft-source-grid-item-->
+                            <!--source="[[source]]"-->
+                            <!--selected="[[selected]]">-->
+                    <!--</ft-source-grid-item>-->
+                <!--</template>-->
+            <!--</iron-list>-->
+        <!--</div>-->
+
+
     </template>
 
     <script>
         Polymer({
 
             is: 'ft-source-grid',
+
+            behaviors: [
+                Polymer.IronResizableBehavior
+            ],
 
             listeners:
             {
@@ -75,8 +101,7 @@ This element displays a grid layout of FileThis source resources.
                 {
                     type: Array,
                     notify: true,
-                    value: [],
-                    observer: "_onSourcesChanged"
+                    value: []
                 },
 
                 /** The currently-selected source, if any. */
@@ -86,11 +111,6 @@ This element displays a grid layout of FileThis source resources.
                     notify: true,
                     value: null
                 }
-            },
-
-            _onSourcesChanged: function(to, from)
-            {
-                this.$.sourceGrid.fire('resize')
             },
 
             _onTap: function()
