--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -36,13 +36,15 @@ This element displays a grid layout of FileThis source resources.
         <style>
             :host {
                 display:block;
+                width:100%;
+                height:100%;
             }
         </style>
 
         <iron-list grid
                    selection-enabled
                    id="sourceGrid"
-                   style="background-color:white; "
+                   style="width:100%; height:100%; background-color:white; "
                    items="[[sources]]"
                    selected-item="{{selectedSource}}"
                    as="source">
@@ -55,28 +57,6 @@ This element displays a grid layout of FileThis source resources.
                 </ft-source-grid-item>
             </template>
         </iron-list>
-
-        <!--<div-->
-                <!--class="layout vertical center"-->
-                <!--style="width:100%; height:100%; ">-->
-            <!--<iron-list grid-->
-                       <!--selection-enabled-->
-                       <!--id="sourceGrid"-->
-                       <!--style="background-color:white; "-->
-                       <!--items="[[sources]]"-->
-                       <!--selected-item="{{selectedSource}}"-->
-                       <!--as="source">-->
-
-                <!--&lt;!&ndash; Source item template &ndash;&gt;-->
-                <!--<template>-->
-                    <!--<ft-source-grid-item-->
-                            <!--source="[[source]]"-->
-                            <!--selected="[[selected]]">-->
-                    <!--</ft-source-grid-item>-->
-                <!--</template>-->
-            <!--</iron-list>-->
-        <!--</div>-->
-
 
     </template>
 
