--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -37,6 +37,7 @@ This element displays a grid layout of FileThis source resources.
             :host {
                 display:block;
                 @apply --layout-vertical;
+                @apply --ft-source-grid;
             }
         </style>
 
