--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -44,6 +44,7 @@ An element that renders a grid of FileThis sources
         </style>
 
         <ft-element-demo
+                name="ft-source-grid"
                 style="width:100%; height:100%; ">
 
             <ft-source-grid
