--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -48,7 +48,7 @@ An element that renders a grid of FileThis sources
                 style="width:100%; height:100%; ">
 
             <ft-source-grid
-                    slot="element"
+                    slot="instance"
                     id="grid"
                     style="width:100%; height:100%; ">
             </ft-source-grid>
