--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -36,6 +36,7 @@ This element displays a grid layout of FileThis source resources.
         <style>
             :host {
                 display:block;
+                overflow:hidden;
                 @apply --layout-vertical;
                 @apply --ft-source-grid;
             }
