--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -40,6 +40,7 @@ An element that renders a grid of FileThis sources
         <style>
             :host {
                 display:block;
+                overflow:hidden;
             }
         </style>
 
