--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -93,8 +93,8 @@ This element displays a grid layout of FileThis source resources.
 
             _onTap: function()
             {
-                if (event.ftComponentName === undefined)
-                    event.ftComponentName = "ft-source-grid";
+                // if (event.ftComponentName === undefined)
+                //     event.ftComponentName = "ft-source-grid";
             },
 
             clearSelection: function()
