--- a/ft-source-grid.html
+++ b/ft-source-grid.html
@@ -19,6 +19,7 @@ limitations under the License.
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../iron-list/iron-list.html">
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../shadycss/apply-shim.html">
 
 <!--
 `<ft-source-grid>`
